# my-bittorrent

./: Cargo.toml  README.md  samples.magnet  test.sh  your_program.sh
.codecrafters/: run.sh
src/: bencoding.rs  bittorent.rs  main.rs
src/bittorent/: connection.rs  downloader.rs  encoding.rs  magnet.rs  metainfo.rs  peer.rs  peer_message.rs  torrent.rs
src/bittorent/peer/: extension.rs  message.rs
