[package]
name = "my-bittorrent"
version = "0.1.0"
authors = ["anhtr13 <github.com/anhtr13>"]
edition = "2024"

[dependencies]
anyhow = "1.0.102"
bytes = "1.11.1"
clap = { version = "4.6.1", features = ["derive"] }
hex = "0.4.3"
rand = "0.10.1"
reqwest = "0.13.3"
sha1 = "0.11.0"
tokio = { version = "1.52.3", features = ["full"] }
